load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_static_library", "zig_test")

zig_binary(
    name = "binary",
    linker_script = "custom.ld",
    main = "bin.zig",
    # As of 0.15.1 linker-scripts require the LLVM/LLD backend,
    # see https://github.com/ziglang/zig/issues/25069.
    zigopts = [
        "-fllvm",
        "-flld",
    ],
)

genrule(
    name = "bin_output",
    outs = ["bin_output.actual"],
    cmd = "$(execpath :binary) > $(OUTS)",
    tools = [":binary"],
)

diff_test(
    name = "bin_output_test",
    size = "small",
    file1 = ":bin_output.expected",
    file2 = ":bin_output.actual",
)

zig_static_library(
    name = "library",
    linker_script = "custom.ld",
    main = "lib.zig",
    # As of 0.15.1 linker-scripts require the LLVM/LLD backend,
    # see https://github.com/ziglang/zig/issues/25069.
    zigopts = [
        "-fllvm",
        "-flld",
    ],
)

build_test(
    name = "library_build_test",
    targets = [
        ":library",
    ],
)

zig_test(
    name = "test",
    size = "small",
    linker_script = "custom.ld",
    main = "test.zig",
    # As of 0.15.1 linker-scripts require the LLVM/LLD backend,
    # see https://github.com/ziglang/zig/issues/25069.
    zigopts = [
        "-fllvm",
        "-flld",
    ],
)
